tests/compile-fail/integration__integration__general__anm_bitwise.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:29:14
   │
29 │         I0 = I0 | I1;
   │              ^^^^^^^ this binary operation not supported in this game


